--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,9 @@ matplotlib>=3.6
 seaborn>=0.12
 scikit-learn>=1.2
 scipy>=1.9
-flask>=2.2
-schedule>=1.1.0
 jupyter>=1.0
-joblib>=1.2
-imbalanced-learn>=0.11.0
+keras>=2.11
+tensorflow>=2.11
+nltk>=3.8
+tensorflowjs>=3.21.0
+kaggle>=1.5.12
